--- a/apartmentRental/src/main/webapp/app/src/partials/addApartment.html
+++ b/apartmentRental/src/main/webapp/app/src/partials/addApartment.html
@@ -1,5 +1,9 @@
 <div class="container">
 	<p>add apartment</p>
+	<form novalidate class="simple-form">
+		Address <input type="text" id="Autocomplete" options="autoCompleteOptions" ng-autocomplete="address" details="details" ng-model="apartment.address" class="form-control"/><br/>
+	</form>
+	
 	<ui-gmap-google-map center='map.center' zoom='map.zoom'>
 		<ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id">
         </ui-gmap-marker>
