Google maps autocomplete is now working on the home page.

--- a/apartmentRental/src/main/webapp/app/src/partials/addApartment.html
+++ b/apartmentRental/src/main/webapp/app/src/partials/addApartment.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<p>add apartment</p>
 	<form novalidate class="simple-form">
-		Address <input type="text" id="Autocomplete" options="autoCompleteOptions" ng-autocomplete="address" details="details" ng-model="apartment.address" class="form-control"/><br/>
+		Address <input type="text" id="Autocomplete" options="autoCompleteOptions" ng-autocomplete="country" details="details" ng-model="apartment.address" class="form-control"/><br/>
 	</form>
 	
 	<ui-gmap-google-map center='map.center' zoom='map.zoom'>
