--- a/apartmentRental/src/main/webapp/app/src/partials/showApartment.html
+++ b/apartmentRental/src/main/webapp/app/src/partials/showApartment.html
@@ -1,8 +1,11 @@
 <div class="container">
 	{{apartment.title}}<button ng-click="changeLoc()" value="change loc"></button>
 	
-	<ui-gmap-google-map center='map.center' zoom='map.zoom'>
-		<ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id">
-        </ui-gmap-marker>
-	</ui-gmap-google-map>
+</div>
+<ui-gmap-google-map center='map.center' zoom='map.zoom'>
+	<ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id">
+       </ui-gmap-marker>
+</ui-gmap-google-map>
+<div class="container">
+	{{apartment.address}}
 </div>
