--- a/apartmentRental/src/main/webapp/app/src/css/styles.css
+++ b/apartmentRental/src/main/webapp/app/src/css/styles.css
@@ -9,4 +9,15 @@
 	float:none;
 	margin:0 auto;
 }
-.angular-google-map-container { height: 400px; }
+.angular-google-map-container { height: 400px; width:100%; }
+/*
+For elements with both the ng-valid and ng-dirty classes
+*/
+.ng-invalid.ng-dirty {
+  border-color: red;
+  outline-color: red;
+}
+.ng-valid.ng-dirty {
+  border-color: green;
+  outline-color: green;
+}
