--- a/propertyRental/src/main/webapp/app/src/css/styles.css
+++ b/propertyRental/src/main/webapp/app/src/css/styles.css
@@ -41,3 +41,23 @@ For elements with both the ng-valid and ng-dirty classes
 	font-size:15px;
 	color:black;
 }
+.drop-box {
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+    width: 300px;
+    height: 150px;
+    text-align: center;
+    padding-top: 25px;
+}
+.dragover {
+    border: 5px dashed blue;
+}
+.thumbnail{
+	width:200px;
+}
+.deletePhoto{
+	float:right;
+}
+.photosToUpload{
+	margin:10px 0 10px 5px;
+}
