Optimized method for inserting new property in db. Added possibility of indicating property's facilities in insert form.

--- a/propertyRental/src/main/webapp/app/src/css/styles.css
+++ b/propertyRental/src/main/webapp/app/src/css/styles.css
@@ -61,3 +61,6 @@ For elements with both the ng-valid and ng-dirty classes
 .photosToUpload{
 	margin:10px 0 10px 5px;
 }
+.facility{
+	font-weight: normal;
+}
