--- a/propertyRental/src/main/webapp/app/src/css/styles.css
+++ b/propertyRental/src/main/webapp/app/src/css/styles.css
@@ -70,3 +70,91 @@ For elements with both the ng-valid and ng-dirty classes
 .thumbnail-backup{
 	opacity: 0.4;
 }
+.propertyTitle{
+	padding:5px;
+	border-bottom:1px solid rgb(224, 224, 224);
+}
+.mainImgContainer{
+    width:100%;
+    height:700px;
+    position:relative;
+}
+.mainImgContainer img{
+	position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index:1;
+    display: block;
+    max-width:100%;
+    max-height:700px;
+}
+.leftArrowBox{
+	position:absolute;
+	left:0;
+	top:0;
+	width:5%;
+	height:100%;
+    z-index:2;
+}
+.leftArrowBox:hover{
+	background: rgba(27, 27, 27, 0.72);
+}
+.leftArrowBox span{
+	top:40%;
+	background:url('../img/leftArrow.png');
+	display:block;
+	height:90px;
+	width:50px;
+	position:absolute;
+}
+.rightArrowBox{
+	position:absolute;
+	top:0;
+	left:95%;
+	width:5%;
+	height:100%;
+    z-index:2;
+}
+.rightArrowBox span{
+	top:40%;
+	background:url('../img/rightArrow.png');
+	display:block;
+	height:90px;
+	width:50px;
+	position:absolute;
+}
+.rightArrowBox:hover{
+	background: rgba(27, 27, 27, 0.72);
+}
+.photoThumbs{
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+	text-align:center;
+}
+.photoThumbs li{
+	display:inline-block;
+	margin:5px;
+}
+.photoThumbs img{
+	width:150px;
+	cursor:pointer;
+}
+.fullWidthContainer{
+	background:rgba(0, 0, 0, 0.01);
+	border-top:1px solid rgb(213, 213, 213);
+	border-bottom:1px solid rgb(213, 213, 213);
+}
+.imgBorder{
+	border: 1px solid rgb(213, 55, 42);
+}
+.formMargin{
+	margin-bottom:0;
+}
+.bookingFormText{
+	text-align:right;
+	padding:6px 0 0 0;
+}
