--- a/propertyRental/src/main/webapp/app/src/partials/home.html
+++ b/propertyRental/src/main/webapp/app/src/partials/home.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-9 centerElement input-append">
-				<form name="queryForm" ng-submit="queryForm.$valid && queryProperties(query)" novalidate>
+				<form name="queryForm" ng-submit="queryForm.$valid && queryProperties()" novalidate>
 					<div class="col-md-4 col-xs-12">
 						<input type="text" name="location" placeholder="Location" options="autoCompleteOptions" 
 							ng-autocomplete details="details" ng-model="query.address" 
@@ -16,7 +16,7 @@
 						<a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="#">
 						    <div class="input-group">
 						    	<input type="text" name="checkIn" placeholder="Check in" ng-model="query.checkIn" 
-								class="form-control" filter-date required />
+								class="form-control" filter-date check-dates-match="{{query.checkOut}}" required />
 							    <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
 						    </div>
 						</a>
@@ -28,7 +28,7 @@
 						<a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
 		    				<div class="input-group">
 		    					<input type="text" name="checkOut" placeholder="Check out" ng-model="query.checkOut" 
-								class="form-control" filter-date required/>
+								class="form-control" filter-date check-dates-match="{{query.checkIn}}" required/>
 							    <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
 						    </div>
 						</a>
@@ -40,6 +40,7 @@
 						<input type="number" name="guestNumber" placeholder="Guest number" ng-model="query.guestNumber" 
 							class="form-control" min="0" required/>
 					</div>
+					<button ng-click="test()">TEST</button>
 					<div class="col-md-1 col-xs-12">
 						<input type="submit" value="Search" class="btn btn-default"/>
 					</div>
