Added spring security to the application and implemented authorization on both front- and backend.

--- a/propertyRental/src/main/webapp/app/src/partials/showProperty.html
+++ b/propertyRental/src/main/webapp/app/src/partials/showProperty.html
@@ -51,7 +51,7 @@
 							class="form-control" min="0" required/>
 					</div>
 					<div class="col-md-2 col-xs-12">
-						<input type="submit" value="Book apartment" class="btn btn-default"/>
+						<input type="submit" value="Book apartment" class="btn btn-default" ng-show="isLoggedIn()"/>
 					</div>
 				</form>
 			</div>
