Some bug fixes in first multi step form.

--- a/propertyRental/src/main/webapp/app/src/partials/home.html
+++ b/propertyRental/src/main/webapp/app/src/partials/home.html
@@ -9,7 +9,7 @@
 					<div class="col-md-4 col-xs-12">
 						<input type="text" name="location" placeholder="Location" options="autoCompleteOptions" 
 							ng-autocomplete details="details" ng-model="query.address" 
-							class="form-control" check-query="{{query.country}}" required/>
+							class="form-control" ng-change="resetQuery()" check-query="{{query.country}}" required/>
 							<div ng-show="queryForm.location.$dirty && queryForm.location.$error.validQuery">INVALID QUERY</div>
 					</div>
 					<div class="col-md-2 col-xs-4 dropdown">
