--- a/propertyRental/src/main/webapp/app/src/partials/showMyProperties.html
+++ b/propertyRental/src/main/webapp/app/src/partials/showMyProperties.html
@@ -7,6 +7,10 @@
 		<a ui-sref="updateProperty({propertyId:property.id})" class='editPropButton'>
 			<button class='btn btn-default'>Edit property</button>
 		</a>
+		<button class='btn btn-default editPropButton' ng-click="showPropertyBookedDays(property.id,2015)">
+			Show property booked days by months
+		</button>
+
 		<hr/>
 	</div>
 </div>
